fix gaps, margins and grid

--- a/HW-4-Arrays/css/style.css
+++ b/HW-4-Arrays/css/style.css
@@ -4,7 +4,8 @@ body {
     font-family: 'Amatic SC', cursive;
 }
 .page__wrapper {
-    margin-left: 5rem;
+    width: 90%;
+    margin: 0 auto;
 }
 .page__title {
     font-size: 4rem;
@@ -13,18 +14,22 @@ body {
 .projects {
     width: 100%;
     display: grid;
-    grid: auto / 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, 600px);
+    grid-auto-flow: row;
     column-gap: 1rem;
     row-gap: 1rem;
+    justify-content: space-around;
 }
 .projects__item {
+    width: 100%;
     display: grid;
-    grid: none / 50% 50%;
-    column-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, 300px);
+    grid-auto-flow: row;
     align-items: center;
 }
 .projects__img {
-    width: 100%;
+    width: 90%;
+    object-fit: cover;
 }
 .projects__item-title {
     font: 700 1.7rem 'Amatic SC', cursive;
